Fixed most of the formatting issues other than images stretching when at a width above 992px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,12 +96,21 @@ body {
 
 .workImageMain img {
     border-style: solid;
-    border-color: var(--frameColor);
-    border-width: 10px; 
-    max-height: 500px;
+    border-width: 1px;
+    padding: 10px;
+    float: left;
+    width: 80%;
+    border-color: var(--frameColor); 
+    max-height: 400px;
+    width: 100%;
 }
 
 .workImageGeneric img {
+    border-style: solid;
+    border-width: 1px;
+    padding: 10px;
+    float: left;
+    width: 80%;
     max-height: 300px
 }
 
@@ -111,6 +120,17 @@ figure {
     padding: 10px;
     float: left;
     width: 25%;
+}
+
+/* Body - Contact Me */
+
+.contactMe {
+    border-style: solid;
+    border-width: 1px;
+    padding: 10px;
+    float: left;
+    width: 75%;
+    text-align: center;
 }
 
 /* Footer Content */
@@ -139,4 +159,5 @@ footer {
     header {
         display: inline-block;
     }
+    
   }
